[gd_scene load_steps=28 format=2]

[ext_resource path="res://levels/city/assets/village04-512-x-256_010.png" type="Texture" id=1]
[ext_resource path="res://levels/city/assets/village04-512-x-256_007.png" type="Texture" id=2]
[ext_resource path="res://levels/city/assets/village04-512-x-256_008.png" type="Texture" id=3]
[ext_resource path="res://levels/city/assets/village04-512-x-256_001.png" type="Texture" id=4]
[ext_resource path="res://levels/city/assets/village04-512-x-256_006.png" type="Texture" id=5]
[ext_resource path="res://levels/city/assets/village04-512-x-256_005.png" type="Texture" id=6]
[ext_resource path="res://levels/city/assets/village04-512-x-256_002.png" type="Texture" id=7]
[ext_resource path="res://levels/city/assets/village04-512-x-256_004.png" type="Texture" id=8]
[ext_resource path="res://levels/city/assets/village04-512-x-256_003.png" type="Texture" id=9]
[ext_resource path="res://levels/common/assets/twilight/grey_bricks/twilight_grey_bricks.tres" type="TileSet" id=10]
[ext_resource path="res://levels/common/assets/twilight/grey_bricks/twilight_grey_bricks_extras_2.tres" type="TileSet" id=11]
[ext_resource path="res://entities/npc/Father.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/npc/Mother.tscn" type="PackedScene" id=13]
[ext_resource path="res://entities/npc/Mother.gd" type="Script" id=14]
[ext_resource path="res://ui/popupDialog/PopupDialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://entities/npc/LanternMan.tscn" type="PackedScene" id=16]
[ext_resource path="res://entities/npc/LanternMan.gd" type="Script" id=17]
[ext_resource path="res://entities/npc/guard.tscn" type="PackedScene" id=18]
[ext_resource path="res://entities/npc/PotionSeller.tscn" type="PackedScene" id=19]
[ext_resource path="res://entities/npc/PotionSeller.gd" type="Script" id=20]
[ext_resource path="res://levels/common/assets/press_b.png" type="Texture" id=21]
[ext_resource path="res://entities/npc/PirateMan.tscn" type="PackedScene" id=22]
[ext_resource path="res://entities/npc/PirateMan.gd" type="Script" id=23]
[ext_resource path="res://levels/city/Area2D.gd" type="Script" id=24]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76.251, 55.2259 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 118.188 )

[node name="Node" type="Node"]

[node name="Background" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="sky" type="Node2D" parent="Background"]
editor/display_folded = true

[node name="sky0" type="Sprite" parent="Background/sky"]
position = Vector2( -312, 32 )
scale = Vector2( 1, 1.3 )
z_index = -9
texture = ExtResource( 1 )

[node name="sky1" type="Sprite" parent="Background/sky"]
position = Vector2( 200, 32 )
scale = Vector2( 1, 1.3 )
z_index = -9
texture = ExtResource( 1 )

[node name="sky2" type="Sprite" parent="Background/sky"]
position = Vector2( 712, 32 )
scale = Vector2( 1, 1.3 )
z_index = -9
texture = ExtResource( 1 )

[node name="sky3" type="Sprite" parent="Background/sky"]
position = Vector2( 1224, 32 )
scale = Vector2( 1, 1.3 )
z_index = -9
texture = ExtResource( 1 )

[node name="sky4" type="Sprite" parent="Background/sky"]
position = Vector2( 1736, 32 )
scale = Vector2( 1, 1.3 )
z_index = -9
texture = ExtResource( 1 )

[node name="clouds" type="Node2D" parent="Background"]
editor/display_folded = true

[node name="clouds0" type="Sprite" parent="Background/clouds"]
position = Vector2( -312, 8 )
texture = ExtResource( 2 )

[node name="clouds1" type="Sprite" parent="Background/clouds"]
position = Vector2( 200, 8 )
z_index = -4
texture = ExtResource( 2 )

[node name="clouds2" type="Sprite" parent="Background/clouds"]
position = Vector2( 712, 8 )
z_index = -4
texture = ExtResource( 2 )

[node name="clouds3" type="Sprite" parent="Background/clouds"]
position = Vector2( 1224, 8 )
z_index = -4
texture = ExtResource( 2 )

[node name="clouds4" type="Sprite" parent="Background/clouds"]
position = Vector2( 1736, 8 )
z_index = -4
texture = ExtResource( 2 )

[node name="Stars" type="Node2D" parent="Background"]
editor/display_folded = true

[node name="stars0" type="Sprite" parent="Background/Stars"]
position = Vector2( -312, 0 )
texture = ExtResource( 3 )

[node name="stars1" type="Sprite" parent="Background/Stars"]
position = Vector2( 200, 0 )
texture = ExtResource( 3 )

[node name="stars2" type="Sprite" parent="Background/Stars"]
position = Vector2( 712, 0 )
texture = ExtResource( 3 )

[node name="stars3" type="Sprite" parent="Background/Stars"]
position = Vector2( 1216, 0 )
texture = ExtResource( 3 )

[node name="stars4" type="Sprite" parent="Background/Stars"]
position = Vector2( 1728, 0 )
z_index = 1
texture = ExtResource( 3 )

[node name="trees" type="Node2D" parent="Background"]
editor/display_folded = true

[node name="trees-1" type="Sprite" parent="Background/trees"]
position = Vector2( -336, 118 )
z_index = -1
texture = ExtResource( 4 )

[node name="trees0" type="Sprite" parent="Background/trees"]
position = Vector2( -312, 144 )
z_index = -3
texture = ExtResource( 5 )

[node name="trees1" type="Sprite" parent="Background/trees"]
position = Vector2( 328, 120 )
z_index = -2
texture = ExtResource( 6 )

[node name="trees2" type="Sprite" parent="Background/trees"]
position = Vector2( 672, 56 )
z_index = -3
texture = ExtResource( 4 )

[node name="trees3" type="Sprite" parent="Background/trees"]
position = Vector2( 200, 144 )
z_index = -3
texture = ExtResource( 5 )

[node name="trees5" type="Sprite" parent="Background/trees"]
position = Vector2( 1176, 104 )
z_index = -3
texture = ExtResource( 5 )

[node name="trees4" type="Sprite" parent="Background/trees"]
position = Vector2( 1304, 64 )
scale = Vector2( 1.2, 1.3 )
z_index = -3
texture = ExtResource( 6 )

[node name="houses" type="Node2D" parent="Background"]
editor/display_folded = true

[node name="houses_1" type="Sprite" parent="Background/houses"]
position = Vector2( 232, 96 )
scale = Vector2( 1.2, 1.3 )
texture = ExtResource( 7 )

[node name="houses_2" type="Sprite" parent="Background/houses"]
position = Vector2( 688, 32 )
scale = Vector2( 1.2, 1.3 )
z_index = -1
texture = ExtResource( 8 )

[node name="houses__4" type="Sprite" parent="Background/houses"]
position = Vector2( 1072, 96 )
scale = Vector2( 1.2, 1.35 )
z_index = -2
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 55, 104, 141, 100 )

[node name="house_6" type="Sprite" parent="Background/houses"]
position = Vector2( 1240, 64 )
scale = Vector2( 1.2, 1.3 )
z_index = -6
texture = ExtResource( 9 )

[node name="house_5" type="Sprite" parent="Background/houses"]
position = Vector2( 1392, 64 )
scale = Vector2( 1.2, 1.3 )
texture = ExtResource( 8 )
flip_h = true

[node name="Platforms" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0.495605, -1.79208 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Bricks" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196510, 1, 0, -65572, 8, 0, -130974, 1, 0, -36, 8, 0, -65438, 1, 0, 65500, 8, 0, 98, 1, 0, 131036, 8, 0, 65634, 1, 0, 196572, 8, 0, 131170, 1, 0, 262108, 8, 0, 196706, 1, 0, 327644, 8, 0, 262242, 1, 0, 393180, 8, 0, 327778, 1, 0, 458716, 8, 0, 393314, 1, 0, 524252, 8, 0, 458850, 1, 0, 589788, 8, 0, 524324, 0, 0, 524325, 3, 0, 524326, 3, 0, 524327, 3, 0, 524328, 3, 0, 524329, 3, 0, 524330, 3, 0, 524331, 3, 0, 524332, 3, 0, 524333, 3, 0, 524334, 3, 0, 524335, 3, 0, 524336, 3, 0, 524337, 3, 0, 524338, 3, 0, 524339, 3, 0, 524340, 3, 0, 524341, 3, 0, 524342, 3, 0, 524343, 3, 0, 524344, 3, 0, 524345, 8, 0, 524386, 1, 0, 655324, 8, 0, 589860, 1, 0, 589861, 4, 0, 589864, 4, 0, 589865, 4, 0, 589866, 4, 0, 589867, 4, 0, 589868, 4, 0, 589869, 4, 0, 589870, 4, 0, 589871, 4, 0, 589872, 4, 0, 589873, 4, 0, 589874, 4, 0, 589875, 4, 0, 589876, 4, 0, 589877, 4, 0, 589878, 4, 0, 589879, 4, 0, 589880, 4, 0, 589881, 6, 0, 589922, 1, 0, 720860, 8, 0, 655396, 1, 0, 655397, 4, 0, 655400, 4, 0, 655401, 4, 0, 655402, 4, 0, 655403, 4, 0, 655404, 4, 0, 655405, 4, 0, 655408, 4, 0, 655409, 4, 0, 655410, 4, 0, 655411, 4, 0, 655412, 4, 0, 655413, 4, 0, 655414, 4, 0, 655415, 4, 0, 655416, 4, 0, 655418, 3, 0, 655419, 3, 0, 655420, 3, 0, 655421, 3, 0, 655422, 3, 0, 655423, 3, 0, 655424, 3, 0, 655425, 3, 0, 655426, 3, 0, 655427, 3, 0, 655428, 3, 0, 655429, 3, 0, 655430, 3, 0, 655431, 3, 0, 655432, 3, 0, 655433, 3, 0, 655434, 3, 0, 655435, 3, 0, 655436, 3, 0, 655437, 3, 0, 655438, 3, 0, 655439, 3, 0, 655440, 3, 0, 655441, 3, 0, 655442, 3, 0, 655443, 3, 0, 655444, 3, 0, 655445, 3, 0, 655446, 3, 0, 655447, 3, 0, 655448, 3, 0, 655449, 3, 0, 655450, 3, 0, 655451, 3, 0, 655452, 3, 0, 655453, 3, 0, 655454, 3, 0, 655455, 3, 0, 655456, 3, 0, 655457, 3, 0, 786396, 8, 0, 720932, 1, 0, 720933, 4, 0, 720934, 4, 0, 720935, 4, 0, 720936, 4, 0, 720939, 4, 0, 720940, 4, 0, 720941, 4, 0, 720944, 4, 0, 720945, 4, 0, 720946, 4, 0, 720947, 4, 0, 720950, 4, 0, 720951, 4, 0, 720952, 4, 0, 720953, 4, 0, 720954, 4, 0, 720955, 4, 0, 720956, 4, 0, 720957, 4, 0, 720958, 4, 0, 720959, 4, 0, 720960, 4, 0, 720961, 4, 0, 720962, 4, 0, 720963, 4, 0, 720964, 4, 0, 720965, 4, 0, 720966, 4, 0, 720967, 4, 0, 720968, 4, 0, 720969, 4, 0, 720970, 4, 0, 720971, 4, 0, 720972, 4, 0, 720973, 4, 0, 720974, 4, 0, 720975, 4, 0, 720976, 4, 0, 720977, 4, 0, 720978, 4, 0, 720979, 4, 0, 720980, 4, 0, 720981, 4, 0, 720982, 4, 0, 720983, 4, 0, 720984, 4, 0, 720985, 4, 0, 720986, 4, 0, 720987, 4, 0, 720988, 4, 0, 720989, 4, 0, 720990, 4, 0, 720991, 4, 0, 720992, 4, 0, 720993, 4, 0, 851932, 3, 0, 851933, 3, 0, 851934, 3, 0, 851935, 3, 0, 851936, 3, 0, 851937, 3, 0, 851938, 3, 0, 851939, 3, 0, 851940, 3, 0, 851941, 3, 0, 851942, 3, 0, 851943, 3, 0, 851944, 3, 0, 851945, 3, 0, 851946, 3, 0, 851947, 3, 0, 851948, 3, 0, 851949, 3, 0, 851950, 3, 0, 851951, 3, 0, 851952, 3, 0, 851953, 3, 0, 851954, 3, 0, 851955, 3, 0, 851956, 3, 0, 851957, 3, 0, 851958, 3, 0, 851959, 3, 0, 851960, 3, 0, 851961, 3, 0, 851962, 3, 0, 851963, 3, 0, 851964, 3, 0, 851965, 3, 0, 851966, 3, 0, 851967, 3, 0, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 786464, 3, 0, 786465, 3, 0, 786466, 3, 0, 786467, 3, 0, 786469, 4, 0, 786470, 4, 0, 786471, 4, 0, 786472, 4, 0, 786475, 4, 0, 786476, 4, 0, 786477, 4, 0, 786478, 4, 0, 786479, 4, 0, 786480, 4, 0, 786481, 4, 0, 786482, 4, 0, 786483, 4, 0, 786486, 4, 0, 786487, 4, 0, 786488, 4, 0, 786489, 4, 0, 786490, 4, 0, 786491, 4, 0, 786492, 4, 0, 786493, 4, 0, 786494, 4, 0, 786495, 4, 0, 786496, 4, 0, 786497, 4, 0, 786498, 4, 0, 786499, 4, 0, 786500, 4, 0, 786501, 4, 0, 786502, 4, 0, 786503, 4, 0, 786504, 4, 0, 786505, 4, 0, 786506, 4, 0, 786507, 4, 0, 786508, 4, 0, 786509, 4, 0, 786510, 4, 0, 786511, 4, 0, 786512, 4, 0, 786513, 4, 0, 786514, 4, 0, 786515, 4, 0, 786516, 4, 0, 786517, 4, 0, 786518, 4, 0, 786519, 4, 0, 786520, 4, 0, 786521, 4, 0, 786522, 4, 0, 786523, 4, 0, 786524, 4, 0, 786525, 4, 0, 786526, 4, 0, 786527, 4, 0, 786528, 4, 0, 786529, 4, 0, 917468, 4, 0, 917469, 4, 0, 917470, 4, 0, 917471, 4, 0, 917472, 4, 0, 917473, 4, 0, 917474, 4, 0, 917475, 4, 0, 917476, 4, 0, 917477, 4, 0, 917478, 4, 0, 917479, 4, 0, 917480, 4, 0, 917481, 4, 0, 917482, 4, 0, 917483, 4, 0, 917484, 4, 0, 917485, 4, 0, 917486, 4, 0, 917487, 4, 0, 917488, 4, 0, 917489, 4, 0, 917490, 4, 0, 917491, 4, 0, 917492, 4, 0, 917493, 4, 0, 917494, 4, 0, 917495, 4, 0, 917496, 4, 0, 917497, 4, 0, 917498, 4, 0, 917499, 4, 0, 917500, 4, 0, 917501, 4, 0, 917502, 4, 0, 917503, 4, 0, 851968, 4, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 851981, 4, 0, 851982, 4, 0, 851983, 4, 0, 851984, 4, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 4, 0, 851992, 4, 0, 851993, 4, 0, 851994, 4, 0, 851995, 4, 0, 851996, 4, 0, 851997, 4, 0, 851998, 4, 0, 851999, 4, 0, 852000, 4, 0, 852001, 4, 0, 852002, 4, 0, 852003, 4, 0, 852004, 4, 0, 852005, 4, 0, 852006, 4, 0, 852007, 4, 0, 852008, 4, 0, 852009, 4, 0, 852010, 4, 0, 852011, 4, 0, 852012, 4, 0, 852013, 4, 0, 852014, 4, 0, 852015, 4, 0, 852016, 4, 0, 852017, 4, 0, 852018, 4, 0, 852019, 4, 0, 852020, 4, 0, 852021, 4, 0, 852022, 4, 0, 852023, 4, 0, 852024, 4, 0, 852025, 4, 0, 852026, 4, 0, 852027, 4, 0, 852028, 4, 0, 852029, 4, 0, 852030, 4, 0, 852031, 4, 0, 852032, 4, 0, 852033, 4, 0, 852034, 4, 0, 852035, 4, 0, 852036, 4, 0, 852037, 4, 0, 852038, 4, 0, 852039, 4, 0, 852040, 4, 0, 852041, 4, 0, 852042, 4, 0, 852043, 4, 0, 852044, 4, 0, 852045, 4, 0, 852046, 4, 0, 852047, 4, 0, 852048, 4, 0, 852049, 4, 0, 852050, 4, 0, 852051, 4, 0, 852052, 4, 0, 852053, 4, 0, 852054, 4, 0, 852055, 4, 0, 852056, 4, 0, 852057, 4, 0, 852058, 4, 0, 852059, 4, 0, 852060, 4, 0, 852061, 4, 0, 852062, 4, 0, 852063, 4, 0, 852064, 4, 0, 852065, 4, 0, 983004, 4, 0, 983005, 4, 0, 983006, 4, 0, 983007, 4, 0, 983008, 4, 0, 983009, 4, 0, 983010, 4, 0, 983011, 4, 0, 983012, 4, 0, 983013, 4, 0, 983014, 4, 0, 983015, 4, 0, 983016, 4, 0, 983017, 4, 0, 983018, 4, 0, 983019, 4, 0, 983020, 4, 0, 983021, 4, 0, 983022, 4, 0, 983023, 4, 0, 983024, 4, 0, 983025, 4, 0, 983026, 4, 0, 983027, 4, 0, 983028, 4, 0, 983029, 4, 0, 983030, 4, 0, 983031, 4, 0, 983032, 4, 0, 983033, 4, 0, 983034, 4, 0, 983035, 4, 0, 983036, 4, 0, 983037, 4, 0, 983038, 4, 0, 983039, 4, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, 4, 0, 917529, 4, 0, 917530, 4, 0, 917531, 4, 0, 917532, 4, 0, 917533, 4, 0, 917534, 4, 0, 917535, 4, 0, 917536, 4, 0, 917537, 4, 0, 917538, 4, 0, 917539, 4, 0, 917540, 4, 0, 917541, 4, 0, 917542, 4, 0, 917543, 4, 0, 917544, 4, 0, 917545, 4, 0, 917546, 4, 0, 917547, 4, 0, 917548, 4, 0, 917549, 4, 0, 917550, 4, 0, 917551, 4, 0, 917552, 4, 0, 917553, 4, 0, 917554, 4, 0, 917555, 4, 0, 917556, 4, 0, 917557, 4, 0, 917558, 4, 0, 917559, 4, 0, 917560, 4, 0, 917561, 4, 0, 917562, 4, 0, 917563, 4, 0, 917564, 4, 0, 917565, 4, 0, 917566, 4, 0, 917567, 4, 0, 917568, 4, 0, 917569, 4, 0, 917570, 4, 0, 917571, 4, 0, 917572, 4, 0, 917573, 4, 0, 917574, 4, 0, 917575, 4, 0, 917576, 4, 0, 917577, 4, 0, 917578, 4, 0, 917579, 4, 0, 917580, 4, 0, 917581, 4, 0, 917582, 4, 0, 917583, 4, 0, 917584, 4, 0, 917585, 4, 0, 917586, 4, 0, 917587, 4, 0, 917588, 4, 0, 917589, 4, 0, 917590, 4, 0, 917591, 4, 0, 917592, 4, 0, 917593, 4, 0, 917594, 4, 0, 917595, 4, 0, 917596, 4, 0, 917597, 4, 0, 917598, 4, 0, 917599, 4, 0, 917600, 4, 0, 917601, 4, 0, 1048540, 4, 0, 1048541, 4, 0, 1048542, 4, 0, 1048543, 4, 0, 1048544, 4, 0, 1048545, 4, 0, 1048546, 4, 0, 1048547, 4, 0, 1048548, 4, 0, 1048549, 4, 0, 1048550, 4, 0, 1048551, 4, 0, 1048552, 4, 0, 1048553, 4, 0, 1048554, 4, 0, 1048555, 4, 0, 1048556, 4, 0, 1048557, 4, 0, 1048558, 4, 0, 1048559, 4, 0, 1048560, 4, 0, 1048561, 4, 0, 1048562, 4, 0, 1048563, 4, 0, 1048564, 4, 0, 1048565, 4, 0, 1048566, 4, 0, 1048567, 4, 0, 1048568, 4, 0, 1048569, 4, 0, 1048570, 4, 0, 1048571, 4, 0, 1048572, 4, 0, 1048573, 4, 0, 1048574, 4, 0, 1048575, 4, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 4, 0, 983045, 4, 0, 983046, 4, 0, 983047, 4, 0, 983048, 4, 0, 983049, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 4, 0, 983053, 4, 0, 983054, 4, 0, 983055, 4, 0, 983056, 4, 0, 983057, 4, 0, 983058, 4, 0, 983059, 4, 0, 983060, 4, 0, 983061, 4, 0, 983062, 4, 0, 983063, 4, 0, 983064, 4, 0, 983065, 4, 0, 983066, 4, 0, 983067, 4, 0, 983068, 4, 0, 983069, 4, 0, 983070, 4, 0, 983071, 4, 0, 983072, 4, 0, 983073, 4, 0, 983074, 4, 0, 983075, 4, 0, 983076, 4, 0, 983077, 4, 0, 983078, 4, 0, 983079, 4, 0, 983080, 4, 0, 983081, 4, 0, 983082, 4, 0, 983083, 4, 0, 983084, 4, 0, 983085, 4, 0, 983086, 4, 0, 983087, 4, 0, 983088, 4, 0, 983089, 4, 0, 983090, 4, 0, 983091, 4, 0, 983092, 4, 0, 983093, 4, 0, 983094, 4, 0, 983095, 4, 0, 983096, 4, 0, 983097, 4, 0, 983098, 4, 0, 983099, 4, 0, 983100, 4, 0, 983101, 4, 0, 983102, 4, 0, 983103, 4, 0, 983104, 4, 0, 983105, 4, 0, 983106, 4, 0, 983107, 4, 0, 983108, 4, 0, 983109, 4, 0, 983110, 4, 0, 983111, 4, 0, 983112, 4, 0, 983113, 4, 0, 983114, 4, 0, 983115, 4, 0, 983116, 4, 0, 983117, 4, 0, 983118, 4, 0, 983119, 4, 0, 983120, 4, 0, 983121, 4, 0, 983122, 4, 0, 983123, 4, 0, 983124, 4, 0, 983125, 4, 0, 983126, 4, 0, 983127, 4, 0, 983128, 4, 0, 983129, 4, 0, 983130, 4, 0, 983131, 4, 0, 983132, 4, 0, 983133, 4, 0, 983134, 4, 0, 983135, 4, 0, 983136, 4, 0, 983137, 4, 0, 1114076, 4, 0, 1114077, 4, 0, 1114078, 4, 0, 1114079, 4, 0, 1114080, 4, 0, 1114081, 4, 0, 1114082, 4, 0, 1114083, 4, 0, 1114084, 4, 0, 1114085, 4, 0, 1114086, 4, 0, 1114087, 4, 0, 1114088, 4, 0, 1114089, 4, 0, 1114090, 4, 0, 1114091, 4, 0, 1114092, 4, 0, 1114093, 4, 0, 1114094, 4, 0, 1114095, 4, 0, 1114096, 4, 0, 1114097, 4, 0, 1114098, 4, 0, 1114099, 4, 0, 1114100, 4, 0, 1114101, 4, 0, 1114102, 4, 0, 1114103, 4, 0, 1114104, 4, 0, 1114105, 4, 0, 1114106, 4, 0, 1114107, 4, 0, 1114108, 4, 0, 1114109, 4, 0, 1114110, 4, 0, 1114111, 4, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 4, 0, 1048599, 4, 0, 1048600, 4, 0, 1048601, 4, 0, 1048602, 4, 0, 1048603, 4, 0, 1048604, 4, 0, 1048605, 4, 0, 1048606, 4, 0, 1048607, 4, 0, 1048608, 4, 0, 1048609, 4, 0, 1048610, 4, 0, 1048611, 4, 0, 1048612, 4, 0, 1048613, 4, 0, 1048614, 4, 0, 1048615, 4, 0, 1048616, 4, 0, 1048617, 4, 0, 1048618, 4, 0, 1048619, 4, 0, 1048620, 4, 0, 1048621, 4, 0, 1048622, 4, 0, 1048623, 4, 0, 1048624, 4, 0, 1048625, 4, 0, 1048626, 4, 0, 1048627, 4, 0, 1048628, 4, 0, 1048629, 4, 0, 1048630, 4, 0, 1048631, 4, 0, 1048632, 4, 0, 1048633, 4, 0, 1048634, 4, 0, 1048635, 4, 0, 1048636, 4, 0, 1048637, 4, 0, 1048638, 4, 0, 1048639, 4, 0, 1048640, 4, 0, 1048641, 4, 0, 1048642, 4, 0, 1048643, 4, 0, 1048644, 4, 0, 1048645, 4, 0, 1048646, 4, 0, 1048647, 4, 0, 1048648, 4, 0, 1048649, 4, 0, 1048650, 4, 0, 1048651, 4, 0, 1048652, 4, 0, 1048653, 4, 0, 1048654, 4, 0, 1048655, 4, 0, 1048656, 4, 0, 1048657, 4, 0, 1048658, 4, 0, 1048659, 4, 0, 1048660, 4, 0, 1048661, 4, 0, 1048662, 4, 0, 1048663, 4, 0, 1048664, 4, 0, 1048665, 4, 0, 1048666, 4, 0, 1048667, 4, 0, 1048668, 4, 0, 1048669, 4, 0, 1048670, 4, 0, 1048671, 4, 0, 1048672, 4, 0, 1048673, 4, 0 )

[node name="Bricks_extra" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 11 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524324, 5, 0, 589862, 1, 0, 589863, 2, 0, 655398, 8, 0, 655399, 7, 0, 655406, 1, 0, 655407, 2, 0, 655417, 8, 0, 720937, 1, 0, 720938, 2, 0, 720942, 8, 0, 720943, 7, 0, 720948, 1, 0, 720949, 2, 0, 786468, 7, 0, 786473, 8, 0, 786474, 7, 0, 786484, 8, 0, 786485, 7, 0 )

[node name="npcs" type="Node2D" parent="."]
editor/display_folded = true

[node name="Father" parent="npcs" instance=ExtResource( 12 )]
editor/display_folded = true
position = Vector2( 1182, 142 )

[node name="Area2D" parent="npcs/Father/StaticBody2D" index="1"]
visible = false

[node name="CollisionShape2D" parent="npcs/Father/StaticBody2D" index="2"]
visible = false

[node name="Mother" parent="npcs" instance=ExtResource( 13 )]
editor/display_folded = true
position = Vector2( 1151.73, 142 )
script = ExtResource( 14 )

[node name="AnimatedSprite" parent="npcs/Mother/StaticBody2D" index="0"]
frame = 1

[node name="CollisionShape2D" parent="npcs/Mother/StaticBody2D/Area2D" index="0"]
position = Vector2( -86.1071, -8.99342 )
scale = Vector2( 1.31923, 1 )

[node name="PopupDialog" parent="npcs/Mother" instance=ExtResource( 15 )]
editor/display_folded = true

[node name="LanternMan" parent="npcs" instance=ExtResource( 16 )]
editor/display_folded = true
modulate = Color( 0.804688, 0.804688, 0.804688, 1 )
position = Vector2( -57, 171 )
script = ExtResource( 17 )

[node name="AnimatedSprite" parent="npcs/LanternMan/StaticBody2D" index="0"]
frame = 1

[node name="CollisionShape2D" parent="npcs/LanternMan/StaticBody2D/Area2D" index="0"]
position = Vector2( -120.861, -9.68291 )

[node name="PopupDialog" parent="npcs/LanternMan" instance=ExtResource( 15 )]
editor/display_folded = true

[node name="Guard" parent="npcs" instance=ExtResource( 18 )]
editor/display_folded = true
modulate = Color( 0.84375, 0.830566, 0.830566, 1 )
position = Vector2( -16, 175 )

[node name="Area2D" parent="npcs/Guard/StaticBody2D" index="1"]
visible = false

[node name="CollisionShape2D" parent="npcs/Guard/StaticBody2D" index="2"]
visible = false

[node name="PotionSeller" parent="npcs" instance=ExtResource( 19 )]
modulate = Color( 0.832031, 0.832031, 0.832031, 1 )
position = Vector2( 560, 175 )
script = ExtResource( 20 )

[node name="CollisionShape2D" parent="npcs/PotionSeller/StaticBody2D/Area2D" index="0"]
position = Vector2( -63.7745, -38.309 )
scale = Vector2( 1.41575, 1 )

[node name="speech_bubble" type="Sprite" parent="npcs/PotionSeller"]
position = Vector2( 16.2233, -31.7509 )
scale = Vector2( 0.216553, 0.20528 )
texture = ExtResource( 21 )

[node name="PopupDialog" parent="npcs/PotionSeller" instance=ExtResource( 15 )]
editor/display_folded = true

[node name="PirateMan" parent="npcs" instance=ExtResource( 22 )]
editor/display_folded = true
modulate = Color( 0.863281, 0.863281, 0.863281, 1 )
position = Vector2( 780, 111 )
script = ExtResource( 23 )

[node name="StaticBody2D" parent="npcs/PirateMan" index="0"]
editor/display_folded = true

[node name="CollisionShape2D" parent="npcs/PirateMan/StaticBody2D" index="2"]
visible = false

[node name="speech_bubble" type="Sprite" parent="npcs/PirateMan"]
position = Vector2( 20.2976, -29.5741 )
scale = Vector2( 0.214016, 0.209364 )
texture = ExtResource( 21 )

[node name="PopupDialog" parent="npcs/PirateMan" instance=ExtResource( 15 )]
editor/display_folded = true

[node name="Area2D" type="Area2D" parent="npcs/PirateMan"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcs/PirateMan/Area2D"]
position = Vector2( -43.3217, -45.278 )
scale = Vector2( 1.30338, 1.2314 )
shape = SubResource( 1 )

[node name="NextLevelArea" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1568, 96 )
script = ExtResource( 24 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelArea"]
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 25 )]

[node name="KinematicBody2D" parent="Player" index="1"]
modulate = Color( 0.8, 0.8, 0.8, 1 )
position = Vector2( -513.003, 168.151 )

[node name="Camera2D" parent="Player/KinematicBody2D" index="4"]
limit_left = -560
limit_right = 1568
limit_bottom = 270

[connection signal="body_entered" from="npcs/Mother/StaticBody2D/Area2D" to="npcs/Mother" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="npcs/Mother/StaticBody2D/Area2D" to="npcs/Mother" method="_on_Area2D_body_exited"]
[connection signal="pressed" from="npcs/Mother/PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="npcs/Mother" method="_on_NextButton_pressed"]
[connection signal="body_entered" from="npcs/LanternMan/StaticBody2D/Area2D" to="npcs/LanternMan" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="npcs/LanternMan/PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="npcs/LanternMan" method="_on_NextButton_pressed"]
[connection signal="body_entered" from="npcs/PotionSeller/StaticBody2D/Area2D" to="npcs/PotionSeller" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="npcs/PotionSeller/StaticBody2D/Area2D" to="npcs/PotionSeller" method="_on_Area2D_body_exited"]
[connection signal="pressed" from="npcs/PotionSeller/PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="npcs/PotionSeller" method="_on_NextButton_pressed"]
[connection signal="pressed" from="npcs/PirateMan/PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="npcs/PirateMan" method="_on_NextButton_pressed"]
[connection signal="body_entered" from="npcs/PirateMan/Area2D" to="npcs/PirateMan" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="npcs/PirateMan/Area2D" to="npcs/PirateMan" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="NextLevelArea" to="NextLevelArea" method="_on_Area2D_body_entered"]

[editable path="npcs/Father"]

[editable path="npcs/Mother"]

[editable path="npcs/Mother/PopupDialog"]

[editable path="npcs/LanternMan"]

[editable path="npcs/LanternMan/PopupDialog"]

[editable path="npcs/Guard"]

[editable path="npcs/PotionSeller"]

[editable path="npcs/PotionSeller/PopupDialog"]

[editable path="npcs/PirateMan"]

[editable path="npcs/PirateMan/PopupDialog"]

[editable path="Player"]

[editable path="Player/Interface"]

[editable path="Player/Interface/Control/PauseMenu"]
